--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -21,16 +21,10 @@ jobs:
 
 
     steps:
-    - uses: actions/checkout@v3
+    #- uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-#
-    - if: github.event_name == 'pull_request'
-      name: Generate build number
-      id: buildnumber
-      uses: einaregilsson/build-number@v3 
-      with:
-        token: ${{secrets.github_token}}    
+#   
    
     - name: Check Out Repo 
       if: github.event_name == 'pull_request'
