--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -11,6 +11,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    container: arm32v7/python:3
     defaults:
       run:
         working-directory: app
@@ -21,7 +22,15 @@ jobs:
 
 
     steps:
-    #- uses: actions/checkout@v3
+
+    - name: Login to Docker Hub
+      if: github.event_name == 'pull_request'
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - uses: docker/build-push-action@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 #   
@@ -30,12 +39,12 @@ jobs:
       if: github.event_name == 'pull_request'
       uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      if: github.event_name == 'pull_request'
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    # - name: Login to Docker Hub
+    #   if: github.event_name == 'pull_request'
+    #   uses: docker/login-action@v1
+    #   with:
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Set up Docker Python
       if: github.event_name == 'pull_request'
@@ -50,11 +59,13 @@ jobs:
         context: ./app
         file: ./app/Dockerfile
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/app1:${{ steps.buildnumber.outputs.build_number }}
+        tags: ${{ secrets.DOCKER_USERNAME }}/app:${{ steps.buildnumber.outputs.build_number }}
 
 
   code-test:
     runs-on: ubuntu-latest
+    needs: [build]
+    container: my-image-name:$(date +%s)
     defaults:
       run:
         working-directory: app
@@ -87,9 +98,10 @@ jobs:
 
 
 
-  deploy:
+  delivery:
 
     runs-on: ubuntu-latest
+    needs: [code-test]
 
     steps:
     - uses: actions/checkout@v3
@@ -141,12 +153,6 @@ jobs:
 #   services:
 #     - docker:dind
 #   stage: build
-
-
-#     # steps:
-#     # - uses: actions/checkout@v3
-#     # - name: Build the Docker image
-#     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 
 #   script:
 #       - docker login -u "gitlab-ci-token" -p "$CI_JOB_TOKEN" $CI_REGISTRY
