--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -32,37 +32,40 @@ jobs:
 
     - uses: docker/build-push-action@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag my-image-name:$("terrarium_target")
 #   
    
     - name: Check Out Repo 
       if: github.event_name == 'pull_request'
       uses: actions/checkout@v2
 
-    # - name: Login to Docker Hub
-    #   if: github.event_name == 'pull_request'
-    #   uses: docker/login-action@v1
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Set up Docker Python
-      if: github.event_name == 'pull_request'
-      id: python
-      uses: docker/setup-python-action@v1
-
-    - name: Build and push
-      if: github.event_name == 'pull_request'
-      id: docker_build
-      uses: docker/build-push-action@v2
+    - name: Setup Python
+      uses: actions/setup-python@v4.2.0
       with:
-        context: ./app
-        file: ./app/Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/app:${{ steps.buildnumber.outputs.build_number }}
+        # Version range or exact version of Python or PyPy to use, using SemVer's version range syntax. Reads from .python-version if unset.
+        python-version: # optional
+          arm32v7/python:3
+      
+        cache: # optional
+          x86
+
+        architecture: # optional
+          linux/arm32v7
+        
+
+    # - name: Build and push
+    #   if: github.event_name == 'pull_request'
+    #   id: docker_build
+    #   uses: docker/build-push-action@v2
+    #   with:
+    #     context: ./app
+    #     file: ./app/Dockerfile
+    #     push: true
+    #     tags: ${{ secrets.DOCKER_USERNAME }}/app:${{ steps.buildnumber.outputs.build_number }}
 
 
-  code-test:
+  test:
     runs-on: ubuntu-latest
     needs: [build]
     container: my-image-name:$(date +%s)
