--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -104,7 +104,7 @@ jobs:
   delivery:
 
     runs-on: ubuntu-latest
-    needs: [code-test]
+    needs: [test]
 
     steps:
     - uses: actions/checkout@v3
