--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -17,13 +17,13 @@ jobs:
         NODE_ENV: arduinoEnv
 
 
-    defaults:
-      run:
-        working-directory: app
-        shell: bash
+    # defaults:
+    #   run:
+    #     working-directory: app
+    #     shell: bash
     
-    env:
-        RUNNER_ARCH : ARM
+    # env:
+    #     RUNNER_ARCH : ARM
 
 
     steps:
@@ -35,7 +35,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - uses: docker/build-push-action@v2
+    #- uses: docker/build-push-action@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$("terrarium_target")
 #   
