--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -35,8 +35,8 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - uses: docker/build-push-action@v2
-      name: Build the Docker image
+    #- uses: docker/build-push-action@v2
+    - name: Build the Docker image
       run: docker build --file Dockerfile --tag my-image-name:$("terrarium_target")
 #   
 
