--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
 
     - name: Login to Docker Hub
-      if: github.event_name == 'pull_request'
+      #if: github.event_name == 'pull_request'
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
@@ -37,7 +37,9 @@ jobs:
 
     #- uses: docker/build-push-action@v2
     - name: Build the Docker image
-      run: docker build --file Dockerfile --tag my-image-name:$("terrarium_target")
+      run: #|
+        #echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "{{ secrets.DOCKER_USERNAME }}" --password-stdin
+        docker image build -t bhpdocker/terrarium_target:latest .
 #   
 
 
