--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -22,39 +22,39 @@ jobs:
     #     working-directory: app
     #     shell: bash
     
-    # env:
-    #     RUNNER_ARCH : ARM
+    env:
+       RUNNER_ARCH : ARM
 
 
     steps:
 
-    - name: Login to Docker Hub
-      #if: github.event_name == 'pull_request'
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    # - name: Login to Docker Hub
+    #   #if: github.event_name == 'pull_request'
+    #   uses: docker/login-action@v1
+    #   with:
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
 
     #- uses: docker/build-push-action@v2
     - name: Build the Docker image
-      run: #|
-        #echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "{{ secrets.DOCKER_USERNAME }}" --password-stdin
+      run: |
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "{{ secrets.DOCKER_USERNAME }}" --password-stdin
         docker image build -t bhpdocker/terrarium_target:latest .
 #   
 
 
-    - name: Setup Python
-      uses: actions/setup-python@v4.2.0
-      with:
-        # Version range or exact version of Python or PyPy to use, using SemVer's version range syntax. Reads from .python-version if unset.
-        python-version: # optional
-          arm32v7/python:3
+    # - name: Setup Python
+    #   uses: actions/setup-python@v4.2.0
+    #   with:
+    #     # Version range or exact version of Python or PyPy to use, using SemVer's version range syntax. Reads from .python-version if unset.
+    #     python-version: # optional
+    #       arm32v7/python:3
       
-        cache: # optional
-          x86
+    #     cache: # optional
+    #       x86
 
-        architecture: # optional
-          linux/arm32v7
+    #     architecture: # optional
+    #       linux/arm32v7
         
 
     # - name: Build and push
