--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -37,8 +37,8 @@ jobs:
 
     #- uses: docker/build-push-action@v2
     - name: Build the Docker image
-      run: |
-        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "{{ secrets.DOCKER_USERNAME }}" --password-stdin
+      run: #|
+#        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "{{ secrets.DOCKER_USERNAME }}" --password-stdin
         docker image build -t bhpdocker/terrarium_target:latest .
 #   
 
