Alterações login docker no estagio build V1.

--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -22,8 +22,8 @@ jobs:
     #     working-directory: app
     #     shell: bash
     
-    env:
-       RUNNER_ARCH : ARM
+    # env:
+    #    RUNNER_ARCH : ARM
 
 
     steps:
