--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -38,7 +38,7 @@ jobs:
     #- uses: docker/build-push-action@v2
     - name: Build the Docker image
       run: |
-        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        echo "${{ secrets.DOCKER_PASSWORD }}" | Docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
         Docker image build -t bhpdocker/terrarium_target:latest .
 #   
 
