--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -35,11 +35,11 @@ jobs:
     #     username: ${{ secrets.DOCKER_USERNAME }}
     #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-    #- uses: docker/build-push-action@v2
+    - uses: docker/build-push-action@v2
     - name: Build the Docker image
       run: |
-        echo "${{ secrets.DOCKER_PASSWORD }}" | Docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        Docker image build -t bhpdocker/terrarium_target:latest .
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        docker image build -t bhpdocker/terrarium_target:latest .
 #   
 
 
