--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -28,12 +28,12 @@ jobs:
 
     steps:
 
-    # - name: Login to Docker Hub
-    #   #if: github.event_name == 'pull_request'
-    #   uses: docker/login-action@v1
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Login to Docker Hub
+      #if: github.event_name == 'pull_request'
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     #- uses: docker/build-push-action@v2
     - name: Build the Docker image
