--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -28,6 +28,9 @@ jobs:
 
     steps:
 
+    - name: check out code
+      uses: actions/checkout@v2
+
     - name: Login to Docker Hub
       #if: github.event_name == 'pull_request'
       uses: docker/login-action@v1
