--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -36,16 +36,16 @@ jobs:
       with:
         repository: my-example-image
         tags: latest
-    - uses: boostchicken-dev/actions-docker-extract@v2
-      id: extract
-      with:
-        image: my-example-image
-        path: /app/.
-    - name: Upload Dist
-      uses: actions/upload-artifact@v2
-      with:
-        path: ${{ steps.extract.outputs.destination }}
-        name: dist
+    # - uses: boostchicken-dev/actions-docker-extract@v2
+    #   id: extract
+    #   with:
+    #     image: my-example-image
+    #     path: /app/.
+    # - name: Upload Dist
+    #   uses: actions/upload-artifact@v2
+    #   with:
+    #     path: ${{ steps.extract.outputs.destination }}
+    #     name: dist
 
 
 
@@ -56,12 +56,12 @@ jobs:
     #     username: ${{ secrets.DOCKER_USERNAME }}
     #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-    #- uses: docker/build-push-action@v2
-#     - name: Build the Docker image
-#       run: |
-#         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-#         docker image build -t bhpdocker/terrarium_target:latest .
-# #   
+    - uses: docker/build-push-action@v2
+    - name: Build the Docker image
+      run: |
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        docker image build -t bhpdocker/terrarium_target:latest .
+#   
 
 
     # - name: Setup Python
