--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -28,14 +28,14 @@ jobs:
 
     steps:
 
-    - name: check out code
-      uses: actions/checkout@v2
+    # - name: check out code
+    #   uses: actions/checkout@v2
 
-    - name: Build Docker Image
-      uses: docker/build-push-action@v1
-      with:
-        repository: my-example-image
-        tags: latest
+    # - name: Build Docker Image
+    #   uses: docker/build-push-action@v1
+    #   with:
+    #     repository: my-example-image
+    #     tags: latest
     # - uses: boostchicken-dev/actions-docker-extract@v2
     #   id: extract
     #   with:
@@ -56,7 +56,7 @@ jobs:
     #     username: ${{ secrets.DOCKER_USERNAME }}
     #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - uses: docker/build-push-action@v2
+    # - uses: docker/build-push-action@v2
     - name: Build the Docker image
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
