--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -49,14 +49,13 @@ jobs:
 
 
 
-    # - name: Login to Docker Hub
-    #   #if: github.event_name == 'pull_request'
-    #   uses: docker/login-action@v1
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Login to Docker Hub
+      run: docker login -u bhpdocker
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
 
-    # - uses: docker/build-push-action@v2
+    - uses: docker/build-push-action@v2
     - name: Build the Docker image
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -90,7 +89,7 @@ jobs:
 
 
   test:
-    runs-on: [self-hosted, linux, ARM]
+    runs-on: [self-hosted, linux, ARM64]
     needs: [build]
     container: 
       image: bhpdocker/terrarium_target:latest
@@ -133,7 +132,7 @@ jobs:
 
   delivery:
 
-    runs-on: [self-hosted, linux, ARM]
+    runs-on: [self-hosted, linux, ARM64]
      #[self-hosted, linux, ARM]
     needs: [test]
     container: 
