--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -50,7 +50,7 @@ jobs:
 
 
     - name: Login to Docker Hub
-      run: docker login -u bhpdocker
+      uses: docker/build-push-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
