teste buildx. Fixed version.

--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-18.04 
     env:      
     #   DOCKER_REGISTRY: brunohenriquep180@gmail.com      
-       DOCKER_IMAGE: bhpdocker/terrarium_target:tagname      
+       DOCKER_IMAGE: bhpdocker/terrarium_target:latest      
     #   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
     #   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
     #   DOCKER_TARGET_PLATFORM: linux/arm/v8
