--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -37,6 +37,9 @@ jobs:
       with:        
         version: latest
 
+    - name: login to docker hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
     - name: build the image
       run: |
         docker buildx build \
