--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -23,19 +23,16 @@ jobs:
 
     steps:
 
-    - name: check out code
-      uses: actions/checkout@v1
-
-    - name: install buildx
+    # Get the repository's code
+    - name: Checkout
+      uses: actions/checkout@v2
+      # https://github.com/docker/setup-qemu-action
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+      # https://github.com/docker/setup-buildx-action
+    - name: Set up Docker Buildx
       id: buildx
-      uses: crazy-max/ghaction-docker-buildx@v1
-      with:
-        version: latest
-
-    - name: Set up Docker Buildx      
-      uses: crazy-max/ghaction-docker-buildx@v1      
-      with:        
-        version: latest
+      uses: docker/setup-buildx-action@v1
 
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
