--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -35,7 +35,7 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: login to docker hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: build the image
       run: |
