--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         docker buildx build \
           --tag ${DOCKER_IMAGE} \
-          --platform linux/amd64,linux/arm/v7,linux/arm64  .
+          --platform linux/arm64  .
 
 
     #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
