--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -37,11 +37,18 @@ jobs:
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    # - name: build the image
-    #   run: |
-    #     docker buildx build \
-    #       --tag ${DOCKER_IMAGE} \
-    #       --platform linux/arm64  .
+    - name: build the image
+      run: |
+        docker buildx build \
+          --tag ${DOCKER_IMAGE} \
+          --platform linux/arm64,linux/arm/v7  .
+
+
+
+
+
+
+
 
 
     -
@@ -63,6 +70,12 @@ jobs:
         platforms: linux/amd64,linux/arm64,linux/arm/v7
         push: true
         tags: ${{ env.DOCKER_IMAGE }}
+
+
+
+
+
+
 
 
     #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
@@ -133,7 +146,7 @@ jobs:
     runs-on: ubuntu-18.04 
     needs: [build]
     container: 
-      image: ${DOCKER_IMAGE}
+      image: ${env.DOCKER_IMAGE}
 
 
     strategy:
