--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -40,7 +40,7 @@ jobs:
     - name: build the image
       run: |
         docker buildx build \
-          --tag ${DOCKER_IMAGE} \
+          --tag ${{ env.DOCKER_IMAGE }} \
           --platform linux/arm64  .
 
 
@@ -51,25 +51,25 @@ jobs:
 
 
 
-    -
-      name: Build and export to Docker
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        load: true
-        tags: ${{ env.DOCKER_IMAGE }}
-    -
-      name: Test
-      run: |
-        docker run --rm ${{ env.DOCKER_IMAGE }}
-    -
-      name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
-        push: true
-        tags: ${{ env.DOCKER_IMAGE }}
+    # -
+    #   name: Build and export to Docker
+    #   uses: docker/build-push-action@v3
+    #   with:
+    #     context: .
+    #     load: true
+    #     tags: ${{ env.DOCKER_IMAGE }}
+    # -
+    #   name: Test
+    #   run: |
+    #     docker run --rm ${{ env.DOCKER_IMAGE }}
+    # -
+    #   name: Build and push
+    #   uses: docker/build-push-action@v3
+    #   with:
+    #     context: .
+    #     platforms: linux/amd64,linux/arm64,linux/arm/v7
+    #     push: true
+    #     tags: ${{ env.DOCKER_IMAGE }}
 
 
 
