test job test. Create env on test job.

--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -144,6 +144,9 @@ jobs:
 
   test:
     runs-on: ubuntu-18.04 
+    env:          
+          DOCKER_IMAGE: bhpdocker/terrarium_target:tagname   
+
     needs: [build]
     container: 
       image: ${{ env.DOCKER_IMAGE }}
