--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -149,7 +149,7 @@ jobs:
 
     needs: [build]
     container: 
-      image: ${{ env.DOCKER_IMAGE }}
+      image: bhpdocker/terrarium_target:tagname
 
 
     strategy:
