--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -72,6 +72,11 @@ jobs:
     #     tags: ${{ env.DOCKER_IMAGE }}
 
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pylint
+  
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
