Fixed module test_with_doctest throught static test. Separate build from test job.

--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -72,6 +72,11 @@ jobs:
     #     tags: ${{ env.DOCKER_IMAGE }}
 
 
+  test:
+    runs-on: ubuntu-18.04 
+    
+    steps:
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
