--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -74,8 +74,10 @@ jobs:
 
   test:
     runs-on: ubuntu-18.04 
-    
+
+    needs: [build]
     steps:
+    
 
     - name: Install dependencies
       run: |
