--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -124,8 +124,8 @@ jobs:
         context: .
         platforms: linux/arm64
         push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.<meta_id>.outputs.tags }}
-        labels: ${{ steps.<meta_id>.outputs.labels }}
+        tags: ${{ bhpdocker }}
+        labels: ${{ terrarium_target:tagname }}
       #run: docker push ${{ env.DOCKER_IMAGE }}
 
 
