--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -95,7 +95,7 @@ jobs:
     # - name: Analysing the code with pylint
     #   run: |
     #     pylint $(git ls-files '*.py')
-    # - name: Analysing the code with doctest
+    - name: Analysing the code with doctest
       run: |
         python -m doctest -v test/test_with_doctest.py 
 
