--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -118,15 +118,14 @@ jobs:
 
   #   steps:
 
-    - name: Docker Push
-      # uses: docker/build-push-action@v2
-      # with:
-      #   context: .
-      #   platforms: linux/arm64
-      #   push: ${{ github.event_name != 'pull_request' }}
-      #   tags: ${{ bhpdocker }}
-      #   labels: ${{ terrarium_target:tagname }}
-      run: docker push ${{ env.DOCKER_IMAGE }}
+    - name: Push to Docker Hub
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+        repository: bhpdocker/terrarium_target
+        tags: latest, ${{ github.run_number }}
+    
 
 
 
