--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -119,12 +119,11 @@ jobs:
   #   steps:
 
     - name: Push to Docker Hub
-      uses: docker/build-push-action@v1
+      uses: docker/build-push-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
-        repository: bhpdocker/terrarium_target
-        tags: latest, ${{ github.run_number }}
+        context: .
+        push: true
+        tags: bhpdocker/terrarium_target:latest, bhpdocker/terrarium_target:${{ github.run_number }}
     
 
 
