--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -122,6 +122,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
+        platforms: linux/arm64
         push: true
         tags: bhpdocker/terrarium_target:latest, bhpdocker/terrarium_target:${{ github.run_number }}
     
