Implantação teste de lint.

--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -44,14 +44,14 @@ jobs:
           --platform linux/arm64  .
 
 
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install pylint
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pylint
   
-    # - name: Analysing the code with pylint
-    #   run: |
-    #     pylint $(git ls-files '*.py')
+    - name: Analysing the code with pylint
+      run: |
+        pylint $(git ls-files '*.py')
     - name: Analysing the code with doctest
       run: |
         python -m doctest -v test/test_with_doctest.py 
