--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -49,9 +49,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
   
-    - name: Analysing the code with pylint
-      run: |
-        pylint $(git ls-files '*.py')
+    # - name: Analysing the code with pylint
+    #   run: |
+    #     pylint $(git ls-files '*.py')
     - name: Analysing the code with doctest
       run: |
         python -m doctest -v test/test_with_doctest.py 
