--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -17,12 +17,12 @@ jobs:
 
     steps:
 
-    # - name: Maximize build space
-    #   uses: easimon/maximize-build-space@master
-    #   with:
-    #     root-reserve-mb: 512
-    #     swap-size-mb: 1024
-    #     remove-dotnet: 'true'
+    - name: Maximize build space
+      uses: easimon/maximize-build-space@master
+      with:
+        root-reserve-mb: 512
+        swap-size-mb: 1024
+        remove-dotnet: 'true'
 
     # Get the repository's code
     - name: Checkout
