--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -35,6 +35,10 @@ jobs:
       id: buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Use home assistant
+    - uses: "actions/checkout@v2"
+    - uses: "home-assistant/actions/hassfest@master"
+
     - name: login to docker hub
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
